# deep-descreen

./: .gitignore  Makefile  README.md  convert.py  pyproject.toml  train.py
descreen/: __main__.py  cli.py  image.py
descreen/assets/: __init__.py
descreen/cli/: __init__.py  args.py  types.py
descreen/image/: __init__.py  color.py  halftone.py  magick.py
descreen/models/: abs.py  simple.py
descreen/models/unet/: __init__.py
descreen/networks/: __init__.py  modules.py  resnet.py  utils.py
descreen/networks/model/: __init__.py  abs.py
descreen/networks/model/basic/: __init__.py
descreen/networks/model/unet/: __init__.py
descreen/networks/models/: __init__.py
descreen/networks/models/basic/: __init__.py
descreen/networks/models/unet/: __init__.py
descreen/training/: __init__.py  __main__.py  cli.py  data.py  loss.py  proc.py
descreen/utilities/: __init__.py  args.py  array.py  filesys.py  subps.py
descreening/: __init__.py  config.py  halftone.py  image.py  main.py  training.py  utilities.py
descreening/dataset/: __init__.py  src.py
descreening/dataset/make/: make.py
descreening/make/: __main__.py
descreening/models/: __init__.py  abs.py
descreening/models/silly/: __init__.py
descreening/models/unet/: __init__.py
descreening/modules/: utils.py
descreening/pitch/: __init__.py  dataset.py  model.py
descreening/pitch/make/: __main__.py
descreening/pitch/train/: __main__.py
modules/: networks.py  training.py
multi/: convert.py  network.py  train.py
pichipichi-simple/: network.py
pitch/: graph.py  network.py
pnn/: data.py  image.py  main.py  training.py  utils.py
pnn/dataset/: aug.py  src.py
pnn/dataset/make/: make.py
pnn/models/: abs.py
pnn/models/silly/: __init__.py
pnn/modules/: __init__.py
standard/: convert.py  dataset.py  network.py  train.py  updater.py
