[project]
name = "deep-descreen"
description = "Experimental neural network-based descreening filter for scanned Anime pictures"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0"}
dynamic = ["version"]
dependencies = [
  "numpy",
  "torch >= 2.2.1",
  "safetensors >= 0.4.2",
  "opencv-python >= 4.9.0",
  "halftone-converter >= 2.6.4",
  "eqlm",
  "rich >= 13.0.0",
]

[project.optional-dependencies]
dev = ["pip", "build", "twine", "mypy", "black"]

[project.scripts]
descreen = "descreen.cli:main"

[project.urls]
homepage = "https://github.com/curegit/deep-descreen"
repository = "https://github.com/curegit/deep-descreen.git"

[build-system]
requires = ["setuptools >= 78"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["descreen*"]

[tool.setuptools.dynamic]
version = {attr = "descreen.__version__"}
